# xarp

./: .env  .gitignore  LICENSE  NOTICE  README.md  capture.py  fal_ai_demo6.py  hand_overlay.py  playback.py  pyproject.toml  sandbox.py
demos/: 3d_manipulation.py  agents.py  asset_types.py  brush.py  buttons.py  camera.py  handtracking.py  lasso_selection.py  mesh_segmentation.py  new_elements.py  parent_test.py  sam_3d_objs.py  sandbox.py  sora.py  video_feed.py  video_player.py  xr_agent.py
demos/291I/: brush.py  krea_rt.py
demos/291I/decart/: lucy.py
demos/291I/krea_rt/: release_server.py
demos/291I/lucy_motion/: lucy_motion.py
demos/291I/skill_scope/: capture.py  closed_loop.py  playback.py  reenacted_playback.py
demos/eics/: 3d_gen.py  adaptive.py  adaptive_2.py  dumbbell.py  mcp_troubleshooting.py  network_benchmark.py  task_support.py  xarp_grid_bench_min_20260211_210800.csv  xarp_grid_bench_min_20260212_004453.csv
demos/kreart_1/: demo.py  fal_ai_demo.py  fal_ai_demo2.py  fal_ai_demo3.py  fal_ai_demo4.py  fal_ai_demo5.py  fal_ai_demo6.py  interactive_video.py
demos/llk/krea_rt/: krea_rt.py
demos/llk/motion_video_control/: motion_video_control.py
demos/llk/skill_scope/: closed_loop.py  generate_video_demo.py  playback.py  reenacted_playback.py  reenacted_playback_ai.py
demos/sam3d/: glb_verifier.py  sam3d_objs.py  world_to_camera.py
demos/skilllens/: capture.py  playback.py
docs/: __init__.py  conf.py  index.rst  preview.py
docs/api/: express.rst  gestures.rst  server.rst
docs/api/commands/: entities.rst  index.rst  info.rst  protocol.rst  sensing.rst  ui.rst
src/xarp/: __init__.py  __main__.py  agents.py  auth.py  authorization.py  chat.py  colors.py  data_models.py  entities.py  express.py  file_storage.py  gestures.py  icons.py  models.py  remote.py  resources.py  server.py  settings.py  smoke.py  spatial.py  time.py  xr.py
src/xarp/commands/: __init__.py  assets.py  control.py  entities.py  info.py  sense.py  sensing.py  ui.py
src/xarp/data_models/: __init__.py  app.py  binaries.py  chat.py  commands.py  data.py  encoding.py  entities.py  responses.py  spatial.py
src/xarp/storage/: __init__.py  local_file_system.py
src/xarp/web/: __init__.py  app.py  chat_ui.py
src/xarp/web_client/: app.py  chat_ui.py
src/xarp/xr/: __init__.py  commands.py
tests/unit/: test_agents.py  test_colors.py  test_express.py  test_icons.py  test_time.py
tests/unit/data_models/: __init__.py  test_camera_intrinsics.py  test_device_info.py  test_hands.py
tests/unit/entities/: test_entities.py
tests/unit/spatial/: test_pose.py  test_quaternion.py  test_transform.py  test_utils.py  test_vector3.py  test_vector4.py
